Closed Bug 953130 Opened 11 years ago Closed 11 years ago

bug 920325 broke --with-system-nspr

Categories

(Core :: WebRTC: Audio/Video, defect)

x86_64
OpenBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29
Tracking Status
firefox27 --- verified
firefox28 --- fixed
firefox29 --- fixed

People

(Reporter: gaston, Assigned: wolfiR)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

In certain circumstances, building using --with-system-nspr doesnt pass -I/usr/local/include, and only has NSPR_CFLAGS (so bug similar to #913590?) ie -I/usr/local/include/nspr. Bug 920325 changed content/media/Latency.h from including prlog.h to nspr/prlog.h (see https://hg.mozilla.org/mozilla-central/rev/c37be651071c#l5.12) thus breaking builds : In file included from /usr/obj/ports/firefox-27.0beta2/build-amd64/dom/bindings/UnifiedBindings0.cpp:2: In file included from ./AnalyserNodeBinding.cpp:8: In file included from ../../dist/include/mozilla/dom/AnalyserNode.h:10: In file included from ../../dist/include/mozilla/dom/AudioNode.h:17: In file included from ../../dist/include/MediaStreamGraph.h:11: In file included from ../../dist/include/AudioStream.h:13: ../../dist/include/Latency.h:11:10: fatal error: 'nspr/prlog.h' file not found #include "nspr/prlog.h" This affects beta (saw it when trying 27.0b2), and probably aurora and central - probably reverting that chunk will fix this.
Blocks: 920325
Or.. that's an unexpected side-effect of bug 931590 ?
(note that i'm building with --disable-webrtc if that matters)
Attached patch patchSplinter Review
Assignee: nobody → mozilla
Status: NEW → ASSIGNED
Comment on attachment 8351729 [details] [diff] [review] patch Shouldn't it be just this?
Attachment #8351729 - Flags: review?(rjesup)
I'm not sure for the first chunk, but yeah probably for part #2. Testing it.
I've tested locally with-system-nspr and it went fine. For non-system-nspr there is: https://tbpl.mozilla.org/?tree=Try&rev=97bcd012ee30 which indicates no problems with "normal" builds. For "" vs. <> it does not really matter in that case but checking for other occurences "" is preferred for prlog.h (and other NSPR headers).
Attachment #8351729 - Flags: review?(rjesup) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Comment on attachment 8351729 [details] [diff] [review] patch [Approval Request Comment] Bug caused by (feature/regressing bug #): 920325 User impact if declined: failure to build using --with-system-nspr Testing completed (on m-c, etc.): WFM on beta, fixes build issue Risk to taking this patch (and alternatives if risky): NPOTB
Attachment #8351729 - Flags: approval-mozilla-beta?
Attachment #8351729 - Flags: approval-mozilla-aurora?
Comment on attachment 8351729 [details] [diff] [review] patch low risk patch resolving build issues and NPOTB
Attachment #8351729 - Flags: approval-mozilla-beta?
Attachment #8351729 - Flags: approval-mozilla-beta+
Attachment #8351729 - Flags: approval-mozilla-aurora?
Attachment #8351729 - Flags: approval-mozilla-aurora+
Landry, can you please verify this is fixed in Firefox 27, 28, and 29?
Flags: needinfo?(landry)
27.0b4 builds for me using --with-system-nspr.
Flags: needinfo?(landry)
(In reply to Landry Breuil (:gaston) from comment #13) > 27.0b4 builds for me using --with-system-nspr. This should also be fixed for Firefox 28 and 29, can you please confirm?
Build on m-c is broken now (because of usage of functions which are in not-yet-released nspr versions, see 929236) so i wont verify it there: /src/mozilla-central/dom/asmjscache/AsmJSCache.cpp:1511:7: error: use of undeclared identifier 'PR_SyncMemMap'; did you mean 'PR_MemMap'? if (PR_SyncMemMap(file->FileDesc(), ^~~~~~~~~~~~~ PR_MemMap /usr/local/include/nspr/prio.h:1847:18: note: 'PR_MemMap' declared here NSPR_API(void *) PR_MemMap( ^ /src/mozilla-central/dom/asmjscache/AsmJSCache.cpp:1511:21: error: cannot initialize a parameter of type 'PRFileMap *' with an rvalue of type 'PRFileDesc *' checking aurora.
And aurora is broken in the same way. great.
(In reply to Landry Breuil (:gaston) from comment #16) > And aurora is broken in the same way. great. Is this a different bug?
Whiteboard: [qa-]
(In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #17) > (In reply to Landry Breuil (:gaston) from comment #16) > > And aurora is broken in the same way. great. > > Is this a different bug? https://bugzilla.mozilla.org/show_bug.cgi?id=942207#c15
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: