Bug 953130 - Fix system NSPR builds for content/media. r=rjesup, a=bajaj